--- a/src/utils/styles/global.css
+++ b/src/utils/styles/global.css
@@ -23,3 +23,11 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+.card {
+  backdrop-filter: blur(25px) saturate(200%);
+  -webkit-backdrop-filter: blur(25px) saturate(200%);
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+}
